# sg300-webpwr

./: .gitignore  README.md  app.py  config.py  pyproject.toml  setup.py  source.me
.github/workflows/: release.yml
PIaaS/: __init__.py  config.py  views.py
PIaaS/templates/: index.html
templates/: .index.html.swp  base.html  index.html
