[project]
name = "PIaaS"
version = "0.0.1"
description = "PI as a Service bare metal cloud Frontend UI"
long_description = open('README.md').read(),
long_description_content_type = 'text/markdown',
dependencies = [
    "flask",
]
[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
