[project]
name = "PIaaS"
dynamic = ["version"]
description = "PI as a Service bare metal cloud Frontend UI"
readme = "README.md"
dependencies = [
    "flask",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
